<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textVisiblePassword" />

        <CheckBox
            android:id="@+id/cbAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin" />

        <CheckBox
            android:id="@+id/cbActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:ignore="ButtonStyle"
                tools:text="Отмена" />


            <Button
                android:id="@+id/btnOk"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ОК" />
        </LinearLayout>

    </LinearLayout>
</layout>